refactor some responsive css

--- a/css/responsive/index.less
+++ b/css/responsive/index.less
@@ -4,11 +4,29 @@
   }
 }
 
+
+@media (max-width: 880px) {
+  h1 {
+    font-size: 1.25em;
+    padding-top: 0.6em;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .wt-index {
+    width: 95%;
+    top: 40%;
+  }
+}
+
+
 @media (max-width: 575px) {
   #social-icons {
     width: 70%;
   }
 }
+
 
 @media (max-width: 475px) {
   #social-icons {
@@ -21,6 +39,7 @@
   }
 }
 
+
 @media (max-width: 420px) {
   article header {
     height: 11%;
@@ -31,5 +50,13 @@
   }
   #avatar {
     top: -20%;
+  }
+}
+
+
+@media (max-width: 380px) {
+  h1 {
+    font-size: 1.1em;
+    padding-top: 0.8em;
   }
 }
