darken icons on hover

--- a/css/index.less
+++ b/css/index.less
@@ -201,6 +201,22 @@ article {
       width: auto !important;
       padding: 1px;
     }
+
+    &:nth-child(1) svg:hover g.social-svg-mask {
+      fill: darken(rgb(63, 114, 155), 15%) !important;
+    }
+    &:nth-child(2) svg:hover g.social-svg-mask {
+      fill: darken(rgb(255, 51, 51), 15%) !important;
+    }
+    &:nth-child(3) svg:hover g.social-svg-mask {
+      fill: darken(rgb(59, 89, 152), 15%) !important;
+    }
+    &:nth-child(4) svg:hover g.social-svg-mask {
+      fill: darken(rgb(0, 172, 237), 15%) !important;
+    }
+    &:nth-child(5) svg:hover g.social-svg-mask {
+      fill: darken(rgb(203, 33, 40), 15%) !important;
+    }
   }
 }
 
