get everything responsively functional

--- a/css/responsive/index.less
+++ b/css/responsive/index.less
@@ -6,9 +6,8 @@
 
 
 @media (max-width: 880px) {
-  h1 {
-    font-size: 1.25em;
-    padding-top: 0.6em;
+  article header h1 {
+    padding-top: 0.2em;
   }
 }
 
@@ -29,7 +28,11 @@
 
 
 @media (max-width: 475px) {
+  article header h1 {
+    padding-top: 0.2em;
+  }
   #social-icons {
+    top: -16%;
     height: 10%;
 
     a {
@@ -45,7 +48,7 @@
     height: 11%;
 
     h1 {
-      padding-top: 0.4em;
+      padding-top: 0;
     }
   }
   #avatar {
@@ -55,8 +58,8 @@
 
 
 @media (max-width: 380px) {
-  h1 {
-    font-size: 1.1em;
-    padding-top: 0.8em;
+  article header h1 svg {
+    height: 77%;
+    padding-bottom: 5%;
   }
 }
